--- a/android/tinySSB/app/src/main/assets/web/src/tremola.html
+++ b/android/tinySSB/app/src/main/assets/web/src/tremola.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/html">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8"
+        http-equiv="Content-Security-Policy"
+        content="
+        connect-src https: file: ipc: socket: ws://localhost:*;
+        script-src https: file: 'self' socket: http://localhost:* 'unsafe-inline' 'unsafe-eval';
+        style-src https: file: 'self' 'unsafe-inline';
+        img-src https: data: file: http://localhost:* 'self' com.web;
+        child-src 'none';
+        object-src 'none';
+        default-src 'self' file: data: https:;
+      "
+  >
   <link rel="stylesheet" type="text/css" href="tremola.css" media="screen" />
   <script type="text/javascript" charset="UTF-8" src="scuttlesort.js"></script>
-  <script type="text/javascript" charset="UTF-8" src="tremola.js"></script>
+  <script type="module" src="tremola.js"></script>
   <script type="text/javascript" charset="UTF-8" src="tremola_settings.js"></script>
   <script type="text/javascript" charset="UTF-8" src="tremola_ui.js"></script>
   <script type="text/javascript" charset="UTF-8" src="qrcode.min.js"></script>
