--- a/android/tinySSB/app/src/main/assets/web/src/tremola.html
+++ b/android/tinySSB/app/src/main/assets/web/src/tremola.html
@@ -15,7 +15,10 @@
   >
   <link rel="stylesheet" type="text/css" href="tremola.css" media="screen" />
   <script type="text/javascript" charset="UTF-8" src="scuttlesort.js"></script>
-  <script type="module" src="tremola.js"></script>
+  <script type="module" src="./tremola.js"></script>
+<!--  <script type="module" src="socket/api/process.js"></script>-->
+  <script type="module" src="./index.js"></script>
+
   <script type="text/javascript" charset="UTF-8" src="tremola_settings.js"></script>
   <script type="text/javascript" charset="UTF-8" src="tremola_ui.js"></script>
   <script type="text/javascript" charset="UTF-8" src="qrcode.min.js"></script>
@@ -23,7 +26,7 @@
   <script type="text/javascript" charset="UTF-8" src="board.js"></script>
   <script type="text/javascript" charset="UTF-8" src="board_ui.js"></script>
 </head>
-<body style="background-image: url('img/splash-as-background.jpg'); background-size: cover; background-color: white; overflow: hidden" onload="backend('ready');">
+<body style="background-image: url('img/splash-as-background.jpg'); background-size: cover; background-color: white; overflow: hidden">
 <div style="width: 100%; height: 100%; margin: 0px">
 
 <div id='menu' class='menu-overlay'>
@@ -526,7 +529,7 @@
       Delete all logs except your own (but keep ID)</button><hr>
     <p><button class="w100 button active item" style="height: 2.5em;" onclick="menu_import_id()">
       Import new secret key (also erases DB)</button><hr>
-    <p><button class="w100 button active item" style="height: 3em;" onclick="backend('exportSecret');">
+    <p><button class="w100 button active item" style="height: 3em;" onclick="custombackend('exportSecret');">
       Export secret key</button><hr>
     <p>&nbsp;<br>&nbsp;<br>&nbsp;<br><button class="w100 button active item" style="height: 2.5em;" onclick="settings_wipe();">
       <span style="color: #e85132 /* var(--red) */;font-weight: 900;">WIPE EVERYTHING IMMEDIATELY</span></button><hr>
