--- a/android/tinySSB/app/src/main/assets/web/src/tremola.html
+++ b/android/tinySSB/app/src/main/assets/web/src/tremola.html
@@ -16,14 +16,14 @@
   <link rel="stylesheet" type="text/css" href="tremola.css" media="screen" />
   <script type="text/javascript" charset="UTF-8" src="scuttlesort.js"></script>
   <script type="module" src="tremola.js"></script>
-  <script type="text/javascript" charset="UTF-8" src="tremola_settings.js"></script>
-  <script type="text/javascript" charset="UTF-8" src="tremola_ui.js"></script>
+  <script type="module" src="tremola_settings.js"></script>
+  <script type="module" src="tremola_ui.js"></script>
   <script type="text/javascript" charset="UTF-8" src="qrcode.min.js"></script>
   <script type="text/javascript" charset="UTF-8" src="pinch-zoom.min.js"></script>
   <script type="text/javascript" charset="UTF-8" src="board.js"></script>
-  <script type="text/javascript" charset="UTF-8" src="board_ui.js"></script>
+  <script type="module" src="board_ui.js"></script>
 </head>
-<body style="background-image: url('img/splash-as-background.jpg'); background-size: cover; background-color: white; overflow: hidden" onload="backend('ready');">
+<body style="background-image: url('img/splash-as-background.jpg'); background-size: cover; background-color: white; overflow: hidden">
 <div style="width: 100%; height: 100%; margin: 0px">
 
 <div id='menu' class='menu-overlay'>
