More fixes of export/import; implementing second tab on the bottom (kanban board); up until pop-up window with 'do you want to create a new kanban board?'

--- a/android/tinySSB/app/src/main/assets/web/src/tremola.html
+++ b/android/tinySSB/app/src/main/assets/web/src/tremola.html
@@ -20,7 +20,7 @@
   <script type="module" src="tremola_settings.js"></script>
   <script type="text/javascript" charset="UTF-8" src="qrcode.min.js"></script>
   <script type="text/javascript" charset="UTF-8" src="pinch-zoom.min.js"></script>
-  <script type="text/javascript" charset="UTF-8" src="board.js"></script>
+  <script type="module" charset="UTF-8" src="board.js"></script>
   <script type="module" src="board_ui.js"></script>
 </head>
 <body style="background-image: url('img/splash-as-background.jpg'); background-size: cover; background-color: white; overflow: hidden">
