More fixes of export/import; working on third tab (contacts), also set "curr_scenario", "prev_scenario", "scenarioMenu" via exported setter method instead of modifying it directly; Modifying own name in third tab now works correctly

--- a/android/tinySSB/app/src/main/assets/web/src/tremola.html
+++ b/android/tinySSB/app/src/main/assets/web/src/tremola.html
@@ -144,7 +144,7 @@
     <div id="old_contact_alias_hdr">Alias:</div>
     <div style="display: flex; margin-top: 5px;">
       <textarea rows=1 id="old_contact_alias" placeholder="Tap here to type" style="width: calc(100% - 50px); vertical-align: middle;"></textarea>
-      <button class="passive buttontext" onclick="save_content_alias();" style="background-image: url('img/checked.svg'); background-color: var(--passive); margin-left: 8px; border: 0pt; height: 3em; width: 3em; vertical-align: middle;">&nbsp;</button>
+      <button id="save-content-alias" class="passive buttontext" style="background-image: url('img/checked.svg'); background-color: var(--passive); margin-left: 8px; border: 0pt; height: 3em; width: 3em; vertical-align: middle;">&nbsp;</button>
     </div>
     <div id=old_contact_details style='text-align: left; padding-top: 3px; display: block;'>
       &nbsp;<br><div>Shortname: &nbsp;XYS2?-?TEYX</div>
