--- a/android/tinySSB/app/src/main/assets/web/src/tremola.html
+++ b/android/tinySSB/app/src/main/assets/web/src/tremola.html
@@ -102,7 +102,7 @@
   </div>
 
   <div id="plus">
-    <button class=float_button onclick="plus_button();">+</button>
+    <button id="plus-button" class=float_button>+</button>
   </div>
 
   <div id='overlay-bg' class='overlay-bg'>
@@ -125,11 +125,11 @@
 
   <div id="new_contact-overlay" class="qr-overlay" style="display: none; text-align: center">
     <div style='margin-bottom: 15px;'>&nbsp;<br>Scan tinySSB QR code<br>of a trustworthy person:</div>
-    <button class="passive buttontext" onclick="qr_scan_start(QR_SCAN_TARGET.ADD_CONTACT);" style="border: 0pt; height: 60pt; width: 120px; background-image: url('img/qr-code-scan.svg');">&nbsp;</button><br>&nbsp;<hr>
+    <button id="qr-scan-start" class="passive buttontext" style="border: 0pt; height: 60pt; width: 120px; background-image: url('img/qr-code-scan.svg');">&nbsp;</button><br>&nbsp;<hr>
     <br>or enter their SSB identity as text:<br>&nbsp;
     <div style="display: flex;">
       <textarea rows="2" id="contact_id" placeholder="Tap here to type" style="width: calc(100% - 50px); vertical-align: middle;"></textarea>
-      <button class="passive buttontext" onclick="qr_scan_success(document.getElementById('contact_id').value);" style="background-image: url('img/checked.svg'); background-color: var(--passive); margin-left: 8px; border: 0pt; height: 3em; width: 3em; vertical-align: middle;">&nbsp;</button>
+      <button id="qr-scan-success" class="passive buttontext" style="background-image: url('img/checked.svg'); background-color: var(--passive); margin-left: 8px; border: 0pt; height: 3em; width: 3em; vertical-align: middle;">&nbsp;</button>
     </div>
     <div style='font-size: x-small; text-align: left;'><tt>
       &nbsp;<br>
