Fixed Scrolling of publ:chat list, if it is longer than the screen

--- a/android/tinySSB/app/src/main/assets/web/src/tremola.html
+++ b/android/tinySSB/app/src/main/assets/web/src/tremola.html
@@ -51,9 +51,9 @@
   </div>
 </div>
 
-<div id='core' style="height: calc(100% - 118px); width: 100%;">
+<div id='core' style="overflow:scroll; height: calc(100% - 118px); width: 100%;">
 
-  <div id='lst:chats' class=w100 style='overflow: hidden'></div>
+  <div id='lst:chats' class=w100 style='overflow: scroll'></div>
 
   <table id='lst:posts' style="width: 100%; display: none; table-layout: auto;">
     <colgroup>
