--- a/android/tinySSB/app/src/main/assets/web/src/tremola.html
+++ b/android/tinySSB/app/src/main/assets/web/src/tremola.html
@@ -18,7 +18,7 @@
   <script type="module" src="tremola_ui.js"></script>
   <script type="module" src="tremola.js"></script>
   <script type="module" src="tremola_settings.js"></script>
-  <script type="text/javascript" charset="UTF-8" src="qrcode.min.js"></script>
+  <script type="module" charset="UTF-8" src="qrcode.js"></script>
   <script type="text/javascript" charset="UTF-8" src="pinch-zoom.min.js"></script>
   <script type="module" charset="UTF-8" src="board.js"></script>
   <script type="module" src="board_ui.js"></script>
