Tried to import bipf module

--- a/android/tinySSB/app/src/main/assets/web/src/tremola.html
+++ b/android/tinySSB/app/src/main/assets/web/src/tremola.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8"
         http-equiv="Content-Security-Policy"
         content="
-        connect-src https: file: ipc: socket: ws://localhost:*;
-        script-src https: file: 'self' socket: http://localhost:* 'unsafe-inline' 'unsafe-eval';
+        connect-src https: file: ipc: socket: npm: ws://localhost:*;
+        script-src https: file: 'self' socket: npm: http://localhost:* 'unsafe-inline' 'unsafe-eval';
         style-src https: file: 'self' 'unsafe-inline';
         img-src https: data: file: http://localhost:* 'self' com.web;
         child-src 'none';
