Test Browserify Bundling for Bipf Import; not yet working

--- a/android/tinySSB/app/src/main/assets/web/src/tremola.html
+++ b/android/tinySSB/app/src/main/assets/web/src/tremola.html
@@ -15,7 +15,8 @@
   >
   <link rel="stylesheet" type="text/css" href="tremola.css" media="screen" />
   <script type="text/javascript" charset="UTF-8" src="scuttlesort.js"></script>
-  <script type="module" src="bipf/index.js"></script>
+  <script type="module" src="fvbundle.js"></script>
+  <script type="module" src="bipfbundle.js"></script>
   <script type="module" src="tremola_ui.js"></script>
   <script type="module" src="tremola.js"></script>
   <script type="module" src="tremola_settings.js"></script>
