Try to modify bipf module manually to ES6 Syntax; made new "fast-varint" file

--- a/android/tinySSB/app/src/main/assets/web/src/tremola.html
+++ b/android/tinySSB/app/src/main/assets/web/src/tremola.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" type="text/css" href="tremola.css" media="screen" />
   <script type="text/javascript" charset="UTF-8" src="scuttlesort.js"></script>
 <!--  <script src="fvbundle.js"></script>-->
-<!--  <script type="module" src="bipfbundle.js"></script>-->
+  <script type="module" src="bipfbundle.js"></script>
   <script type="module" src="bundled.js"></script>
   <script type="module" src="tremola_ui.js"></script>
   <script type="module" src="tremola.js"></script>
