--- a/android/tinySSB/app/src/main/assets/web/src/tremola.html
+++ b/android/tinySSB/app/src/main/assets/web/src/tremola.html
@@ -440,7 +440,7 @@
     <div class="settings">
       <div class="settingsText">Connect to Peers via BLE</div>
       <div style="float: right;"><label class="switch">
-        <input id="ble" type="checkbox" onchange="toggle_changed(this);">
+        <input id="ble" type="checkbox">
         <span class="slider round"></span></label></div>
     </div>
     <hr>
@@ -448,7 +448,7 @@
     <div class="settings">
       <div class="settingsText">Connect to Peers via UDP Multicast</div>
       <div><label class="switch">
-        <input id="udp_multicast" type="checkbox" onchange="toggle_changed(this);">
+        <input id="udp_multicast" type="checkbox">
         <span class="slider round"></span>
       </label></div>
     </div>
@@ -457,7 +457,7 @@
     <div class="settings">
       <div class="settingsText">Connect to Pub via Websocket</div>
       <div style="float: right;"><label class="switch">
-        <input id="websocket" type="checkbox" onchange="toggle_changed(this);">
+        <input id="websocket" type="checkbox">
         <span class="slider round"></span></label></div>
     </div>
     <div id="container:settings_ws_url" class="websocket_url_settings" style="display:none;">
@@ -470,7 +470,7 @@
     <div class="settings">
       <div class="settingsText">Preview before sending</div>
       <div style="float: right;"><label class="switch">
-        <input id="enable_preview" type="checkbox" onchange="toggle_changed(this);">
+        <input id="enable_preview" type="checkbox">
         <span class="slider round"></span></label></div>
     </div>
     <hr>
@@ -478,7 +478,7 @@
     <div class="settings">
       <div class="settingsText">Hide forgotten contacts</div>
       <div style="float: right;"><label class="switch">
-        <input id="hide_forgotten_contacts" type="checkbox" onchange="toggle_changed(this);">
+        <input id="hide_forgotten_contacts" type="checkbox">
         <span class="slider round"></span></label></div>
     </div>
     <hr>
@@ -486,7 +486,7 @@
     <div class="settings">
       <div class="settingsText">Hide forgotten Kanban Boards</div>
       <div style="float: right;"><label class="switch">
-        <input id="hide_forgotten_boards" type="checkbox" onchange="toggle_changed(this);">
+        <input id="hide_forgotten_boards" type="checkbox">
         <span class="slider round"></span></label></div>
     </div>
     <hr>
@@ -494,7 +494,7 @@
     <div class="settings">
       <div class="settingsText">Hide forgotten conversations</div>
       <div style="float: right;"><label class="switch">
-        <input id="hide_forgotten_conv" type="checkbox" onchange="toggle_changed(this);">
+        <input id="hide_forgotten_conv" type="checkbox">
         <span class="slider round"></span></label></div>
     </div>
     <hr>
@@ -502,7 +502,7 @@
     <div class="settings">
       <div class="settingsText"><del>Show shortname instead of SSB id</del></div>
       <div style="float: right;"><label class="switch">
-        <input id="show_shortnames" type="checkbox" onchange="toggle_changed(this);">
+        <input id="show_shortnames" type="checkbox">
         <span class="slider round"></span></label></div>
     </div>
     <hr>
@@ -510,7 +510,7 @@
     <div class="settings">
       <div class="settingsText">Background map</div>
       <div style="float: right;"><label class="switch">
-        <input id="background_map" type="checkbox" onchange="toggle_changed(this);">
+        <input id="background_map" type="checkbox">
         <span class="slider round"></span></label></div>
     </div>
     <hr>
