--- a/android/tinySSB/app/src/main/assets/web/src/tremola.html
+++ b/android/tinySSB/app/src/main/assets/web/src/tremola.html
@@ -40,7 +40,7 @@
   <script type="module" src="board_ui.js"></script>
 </head>
 <body style="background-image: url('img/splash-as-background.jpg'); background-size: cover; background-color: white; overflow: hidden">
-<div style="width: 100%; height: 100%; margin: 0px; margin-top: 0px">
+<div id="main_division" style="width: 100%; height: 100%; margin: 0px; margin-top: 0px">
 
 <div id='menu' class='menu-overlay'>
 <!--  <button onclick="delete_chat_item();">Delete this chat</button><br>
