UI improvement for iPhone, such that textarea when adding to the chat automatically moves up, while you are typing in the textfield

--- a/android/tinySSB/app/src/main/assets/web/src/tremola.html
+++ b/android/tinySSB/app/src/main/assets/web/src/tremola.html
@@ -39,7 +39,7 @@
   <script type="module" charset="UTF-8" src="board.js"></script>
   <script type="module" src="board_ui.js"></script>
 </head>
-<body style="background-image: url('img/splash-as-background.jpg'); background-size: cover; background-color: white; overflow: hidden">
+<body style="background-image: url('img/splash-as-background.jpg'); background-size: cover; background-color: white; overflow: auto">
 <div id="main_division" style="width: 100%; height: 100%; margin: 0px; margin-top: 0px">
 
 <div id='menu' class='menu-overlay'>
