--- a/android/tinySSB/app/src/main/assets/web/src/tremola.html
+++ b/android/tinySSB/app/src/main/assets/web/src/tremola.html
@@ -59,11 +59,11 @@
 
   <div id='hdr' style="height: 45px;margin: 3px; width: calc(100% - 6px);">
   <div style="display:flex; flex-direction: row; justify-content: center; align-items: center;">
-    <div id="div:qr" style="align: left;"><button id='btn:qr' class="flat" style="background-color: transparent;"><font size=+2><strong>&nbsp;&#x2680;&nbsp;</strong></font></button></div>
+    <div id="div:qr" style="align: left;"><button id='btn:qr' class="flat" onclick="showQR();" style="background-color: transparent;"><font size=+2><strong>&nbsp;&#x2680;&nbsp;</strong></font></button></div>
     <div id="div:back" style="display: none; padding-right: 10px;"><button id='back' class="flat buttontext" style="background-image: url('img/back.svg'); background-color: transparent; height: 25px; width: 25px; margin-left: 5px; margin-top: 2px;" onclick="onBackPressed();">&nbsp;<!--font size=+2><strong>&nbsp;&#x276E;&nbsp;</strong></font --></button></div>
     <div id='tremolaTitle' align=center style="padding-top: 2pt; width: 100%;font-family: Helvetica;font-weight: 900;"><font size=+2 color=#e85132>t i n y S S B<!-- &#x26F0; --></font></div>
     <div id='conversationTitle' style="display: none; padding-left: 5px; padding-right: 5px; padding-top: 2px; color: #e85132; font-size: small; overflow: hidden; width: 100%;">ABC</div>
-    <div><button id='btn:menu' class="flat neutral" style="vertical-align: top; background-color: transparent; padding-top: 3pt;"><font size=+1>&nbsp;<strong>&#9776;</strong>&nbsp;</font></button></div>
+    <div><button id='btn:menu' class="flat neutral" onclick="btnBridge(this);" style="vertical-align: top; background-color: transparent; padding-top: 3pt;"><font size=+1>&nbsp;<strong>&#9776;</strong>&nbsp;</font></button></div>
   </div>
 </div>
 
@@ -102,8 +102,8 @@
         (You can also generate new kanban boards using the + icon)
       </div>
       <div>
-        <button id="btn:create_personal_board_accept" class="kanban_create_personal_btn" style="background-image: url('img/checked.svg');"></button>
-        <button id="btn:create_personal_board_decline" class="kanban_create_personal_btn" style="background-image: url('img/cancel.svg'); background-position-x: -1.5px;"></button>
+        <button id="btn:create_personal_board_accept" class="kanban_create_personal_btn" onclick="btn_create_personal_board_accept()" style="background-image: url('img/checked.svg');"></button>
+        <button id="btn:create_personal_board_decline" class="kanban_create_personal_btn" onclick="btn_create_personal_board_decline()" style="background-image: url('img/cancel.svg'); background-position-x: -1.5px;"></button>
       </div>
     </div>
   </div>
@@ -118,19 +118,19 @@
   </div>
 
   <div id="plus">
-    <button id="plus-button" class=float_button>+</button>
+    <button id="plus-button" class=float_button onclick="plus_button();">+</button>
   </div>
 
-  <div id='overlay-bg' class='overlay-bg'>
+  <div id='overlay-bg' class='overlay-bg' onclick="closeOverlay();">
   </div>
 
-  <div id='overlay-trans' class='overlay-trans'>
+  <div id='overlay-trans' class='overlay-trans' onclick="closeOverlay();">
   </div>
 
-  <div id='overlay-bg-core' class='overlay-bg-core'>
+  <div id='overlay-bg-core' class='overlay-bg-core' onclick="closeOverlay();">
   </div>
 
-  <div id='overlay-trans-core' class='overlay-trans-core'>
+  <div id='overlay-trans-core' class='overlay-trans-core' onclick="closeOverlay();">
   </div>
 
   <div id='new_chat-overlay' class='qr-overlay'>
@@ -141,11 +141,11 @@
 
   <div id="new_contact-overlay" class="qr-overlay" style="display: none; text-align: center">
     <div style='margin-bottom: 15px;'>&nbsp;<br>Scan tinySSB QR code<br>of a trustworthy person:</div>
-    <button id="qr-scan-start" class="passive buttontext" style="border: 0pt; height: 60pt; width: 120px; background-image: url('img/qr-code-scan.svg');">&nbsp;</button><br>&nbsp;<hr>
+    <button id="qr-scan-start" class="passive buttontext" onclick="qr_scan_start(QR_SCAN_TARGET.ADD_CONTACT);" style="border: 0pt; height: 60pt; width: 120px; background-image: url('img/qr-code-scan.svg');">&nbsp;</button><br>&nbsp;<hr>
     <br>or enter their SSB identity as text:<br>&nbsp;
     <div style="display: flex;">
       <textarea rows="2" id="contact_id" placeholder="Tap here to type" style="width: calc(100% - 50px); vertical-align: middle;"></textarea>
-      <button id="qr-scan-success" class="passive buttontext" style="background-image: url('img/checked.svg'); background-color: var(--passive); margin-left: 8px; border: 0pt; height: 3em; width: 3em; vertical-align: middle;">&nbsp;</button>
+      <button id="qr-scan-success" class="passive buttontext" onclick="qr_scan_success(document.getElementById('contact_id').value);" style="background-image: url('img/checked.svg'); background-color: var(--passive); margin-left: 8px; border: 0pt; height: 3em; width: 3em; vertical-align: middle;">&nbsp;</button>
     </div>
     <div style='font-size: x-small; text-align: left;'><tt>
       &nbsp;<br>
@@ -160,7 +160,7 @@
     <div id="old_contact_alias_hdr">Alias:</div>
     <div style="display: flex; margin-top: 5px;">
       <textarea rows=1 id="old_contact_alias" placeholder="Tap here to type" style="width: calc(100% - 50px); vertical-align: middle;"></textarea>
-      <button id="save-content-alias" class="passive buttontext" style="background-image: url('img/checked.svg'); background-color: var(--passive); margin-left: 8px; border: 0pt; height: 3em; width: 3em; vertical-align: middle;">&nbsp;</button>
+      <button id="save-content-alias" class="passive buttontext" onclick="save_content_alias();" style="background-image: url('img/checked.svg'); background-color: var(--passive); margin-left: 8px; border: 0pt; height: 3em; width: 3em; vertical-align: middle;">&nbsp;</button>
     </div>
     <div id=old_contact_details style='text-align: left; padding-top: 3px; display: block;'>
       &nbsp;<br><div>Shortname: &nbsp;XYS2?-?TEYX</div>
@@ -554,9 +554,9 @@
 <div id='div:footer' class=neutral style="height: 56px; align-content: center; border: 3px inset #ebf4fa /*var(--light)*/; border-radius: 2px; margin: 3px; width: calc(100% - 12px);">
 
   <table width=100% cellpadding="2pt"><tr>
-    <td width=33%><button id='btn:chats'    class="w100 flat active buttontext" style="background-image: url('img/chat.svg');">&nbsp;<!-- font size=+3>&#x1F4E8;</font><br><font size=small>Chats</font --></button>
-    <td width=33%><button id='btn:kanban'   class="w100 flat passive buttontext" style="background-image: url('img/kanban.svg');">&nbsp;<!-- font size=+3>&#x1F5E3;</font><br><font size=small>Board</font --></button>
-    <td width=33%><button id='btn:contacts' class="w100 flat passive buttontext" style="background-image: url('img/contacts.svg');">&nbsp;<!-- font size=+3>&#x1F465;</font><br><font size=small>Contacts</font --></button>
+    <td width=33%><button id='btn:chats'    class="w100 flat active buttontext" onclick="btnBridge(this);" style="background-image: url('img/chat.svg');">&nbsp;<!-- font size=+3>&#x1F4E8;</font><br><font size=small>Chats</font --></button>
+    <td width=33%><button id='btn:kanban'   class="w100 flat passive buttontext" onclick="btnBridge(this);" style="background-image: url('img/kanban.svg');">&nbsp;<!-- font size=+3>&#x1F5E3;</font><br><font size=small>Board</font --></button>
+    <td width=33%><button id='btn:contacts' class="w100 flat passive buttontext" onclick="btnBridge(this);" style="background-image: url('img/contacts.svg');">&nbsp;<!-- font size=+3>&#x1F465;</font><br><font size=small>Contacts</font --></button>
   </table>
 
 </div>
@@ -564,8 +564,8 @@
   <table id="div:textarea" class="neutral" style="height: 56px; width: calc(100% - 6pt); display: none; border: 3px inset #ebf4fa /*var(--light)*/; margin: 3pt;" width=100%>
     <tr><td width=95%><textarea id='draft' rows=3 placeholder='Tap here to type'></textarea>
       <!-- td width=5% height=100%><button id='btn:attach' class="flat passive buttontext"><font size=+2>&#x1F4CE;</font><br><font size=small>Attach</font></button></td -->
-      <td width=8% height=100%><button id='btn:attach' class="flat white buttontext" style="background-image: url('img/record.svg'); fill: #fff; width: 50px; height: 50px; margin-bottom: 4px;"></button>
-      <td width=5% height=100%><button id='btn:preview' class="flat passive buttontext" style="background-image: url('img/send-button.svg'); width: 50px; height: 50px; margin-bottom: 4px;">&nbsp;<!-- font size=+2>&#x1F440;</font><br><font size=small>Preview</font --></button>
+      <td width=8% height=100%><button id='btn:attach' class="flat white buttontext" onclick="btnBridge(this);" style="background-image: url('img/record.svg'); fill: #fff; width: 50px; height: 50px; margin-bottom: 4px;"></button>
+      <td width=5% height=100%><button id='btn:preview' class="flat passive buttontext" onclick="showPreview()" style="background-image: url('img/send-button.svg'); width: 50px; height: 50px; margin-bottom: 4px;">&nbsp;<!-- font size=+2>&#x1F440;</font><br><font size=small>Preview</font --></button>
   </table>
 
   <div id='div:confirm-members' class=neutral style="height: 36px; align-content: center; border: 3px inset #ebf4fa /*var(--light)*/; border-radius: 2pt; margin: 3px; margin-top: 20px; display: none; flex-direction: row; justify-content: center; align-items: center;">
