--- a/android/tinySSB/app/src/main/assets/web/src/tremola.html
+++ b/android/tinySSB/app/src/main/assets/web/src/tremola.html
@@ -337,8 +337,8 @@
 
   <div id='edit-overlay' class='qr-overlay'>
     <div id="edit_title" style='margin-bottom: 25px;'>Edit X:</div>
-    <input type="text" id="edit_text" minlength="1" size="64" style="width: calc(100% - 10px); height: 30px;">&nbsp;
-    <div style='text-align: right;'><button id="edit-confirmed" class="passive buttontext" style="background-image: url('img/checked.svg'); margin-right: 5px; border: 0pt; height: 30px; width: 30px;">&nbsp;</button></div>
+    <input type="text" id="edit_text" onkeypress="onEnter(event)" minlength="1" size="64" style="width: calc(100% - 10px); height: 30px;">&nbsp;
+    <div style='text-align: right;'><button id="edit-confirmed" class="passive buttontext" onclick="edit_confirmed();" style="background-image: url('img/checked.svg'); margin-right: 5px; border: 0pt; height: 30px; width: 30px;">&nbsp;</button></div>
   </div>
 
   <div id='import-id-overlay' class='qr-overlay'>
@@ -349,7 +349,7 @@
     <div style='display: flex; justify-content: center;'><button class="passive buttontext" onclick="qr_scan_start(QR_SCAN_TARGET.IMPORT_ID);" style="border: 0pt; height: 60pt; width: 120px; background-image: url('img/qr-code-scan.svg');margin: auto;">&nbsp;</button></div>
     <br>
     <div style='text-align: center; margin-left: 10px; margin-right: 10px;margin-bottom: 15px;'><b>Import via copied secret key</b></div>
-    <textarea placeholder='{"curve": "ed25519", "secret": "YOUR SECRECT KEY"}' id="import-id-input" rows="3"></textarea>
+    <textarea placeholder='{"curve": "ed25519", "secret": "YOUR SECRECT KEY"}' id="import-id-input" rows="3" onkeypress="onEnter(event)"></textarea>
     <button class="passive buttontext" style="background-image: url('img/checked.svg');border: 0pt; height: 40px; width: 40px;" onclick="btn_import_id()" ></button>
     <div></div>
   </div>
@@ -453,7 +453,7 @@
     <div class="settings">
       <div class="settingsText">Connect to Peers via BLE</div>
       <div style="float: right;"><label class="switch">
-        <input id="ble" type="checkbox">
+        <input id="ble" type="checkbox" onchange="toggle_changed(this);">
         <span class="slider round"></span></label></div>
     </div>
     <hr>
@@ -461,7 +461,7 @@
     <div class="settings">
       <div class="settingsText">Connect to Peers via UDP Multicast</div>
       <div><label class="switch">
-        <input id="udp_multicast" type="checkbox">
+        <input id="udp_multicast" type="checkbox" onchange="toggle_changed(this);">
         <span class="slider round"></span>
       </label></div>
     </div>
@@ -470,12 +470,12 @@
     <div class="settings">
       <div class="settingsText">Connect to Pub via Websocket</div>
       <div style="float: right;"><label class="switch">
-        <input id="websocket" type="checkbox">
+        <input id="websocket" type="checkbox" onchange="toggle_changed(this);">
         <span class="slider round"></span></label></div>
     </div>
     <div id="container:settings_ws_url" class="websocket_url_settings" style="display:none;">
       <div class="settingsText" style="margin-right: 10px;font-size: 16px;margin-bottom: 5px;">URL: </div>
-      <input type="text" id="settings_urlInput" placeholder="Websocket-Url (ws://...)" required style="height:30px; width: 70%">
+      <input type="text" id="settings_urlInput" onkeypress="onEnter(event)" placeholder="Websocket-Url (ws://...)" required style="height:30px; width: 70%">
       <button id="btn:url" class ="flat passive buttontext" onclick="btn_setWebsocketUrl()" style="background-image: url('img/checked.svg'); width:35px; height:35px; margin-left: 5px;"></button>
     </div>
     <hr>
@@ -483,7 +483,7 @@
     <div class="settings">
       <div class="settingsText">Preview before sending</div>
       <div style="float: right;"><label class="switch">
-        <input id="enable_preview" type="checkbox">
+        <input id="enable_preview" type="checkbox" onchange="toggle_changed(this);">
         <span class="slider round"></span></label></div>
     </div>
     <hr>
@@ -491,7 +491,7 @@
     <div class="settings">
       <div class="settingsText">Hide forgotten contacts</div>
       <div style="float: right;"><label class="switch">
-        <input id="hide_forgotten_contacts" type="checkbox">
+        <input id="hide_forgotten_contacts" type="checkbox" onchange="toggle_changed(this);">
         <span class="slider round"></span></label></div>
     </div>
     <hr>
@@ -499,7 +499,7 @@
     <div class="settings">
       <div class="settingsText">Hide forgotten Kanban Boards</div>
       <div style="float: right;"><label class="switch">
-        <input id="hide_forgotten_boards" type="checkbox">
+        <input id="hide_forgotten_boards" type="checkbox" onchange="toggle_changed(this);">
         <span class="slider round"></span></label></div>
     </div>
     <hr>
@@ -507,7 +507,7 @@
     <div class="settings">
       <div class="settingsText">Hide forgotten conversations</div>
       <div style="float: right;"><label class="switch">
-        <input id="hide_forgotten_conv" type="checkbox">
+        <input id="hide_forgotten_conv" type="checkbox" onchange="toggle_changed(this);">
         <span class="slider round"></span></label></div>
     </div>
     <hr>
@@ -515,7 +515,7 @@
     <div class="settings">
       <div class="settingsText"><del>Show shortname instead of SSB id</del></div>
       <div style="float: right;"><label class="switch">
-        <input id="show_shortnames" type="checkbox">
+        <input id="show_shortnames" type="checkbox" onchange="toggle_changed(this);">
         <span class="slider round"></span></label></div>
     </div>
     <hr>
@@ -523,7 +523,7 @@
     <div class="settings">
       <div class="settingsText">Background map</div>
       <div style="float: right;"><label class="switch">
-        <input id="background_map" type="checkbox">
+        <input id="background_map" type="checkbox" onchange="toggle_changed(this);">
         <span class="slider round"></span></label></div>
     </div>
     <hr>
@@ -534,11 +534,11 @@
     <hr>
 
 
-    <p><button id="settings_restream_posts" class="w100 button active item" style="height: 2.5em;">
+    <p><button id="settings_restream_posts" class="w100 button active item" style="height: 2.5em;" onclick="settings_restream_posts();">
       Re-stream posts</button><hr>
-    <p><button id="settings_reset_ui" class="w100 button active item" style="height: 2.5em;">
+    <p><button id="settings_reset_ui" class="w100 button active item" style="height: 2.5em;" onclick="settings_reset_ui();">
       Reset UI + Re-stream (but keep ID)</button><hr>
-    <p><button id="settings_clear_other_feeds" class="w100 button active item" style="height: 2.5em;">
+    <p><button id="settings_clear_other_feeds" class="w100 button active item" style="height: 2.5em;" onclick="settings_clear_other_feeds();">
       Delete all logs except your own (but keep ID)</button><hr>
     <p><button class="w100 button active item" style="height: 2.5em;" onclick="menu_import_id()">
       Import new secret key (also erases DB)</button><hr>
@@ -570,7 +570,7 @@
 
   <div id='div:confirm-members' class=neutral style="height: 36px; align-content: center; border: 3px inset #ebf4fa /*var(--light)*/; border-radius: 2pt; margin: 3px; margin-top: 20px; display: none; flex-direction: row; justify-content: center; align-items: center;">
     <!-- button class="flat passive buttontext" style="background-image: url('img/cancel.svg'); width: 50%; height: 50px; margin: 5px;" onclick="onBackPressed();">&nbsp;</--button -->
-    <button id="members-confirmed" class="flat passive buttontext" style="background-image: url('img/checked.svg'); width: 100%; height: 30px; margin: 3px;">&nbsp;</button>
+    <button id="members-confirmed" class="flat passive buttontext" onclick="members_confirmed();" style="background-image: url('img/checked.svg'); width: 100%; height: 30px; margin: 3px;">&nbsp;</button>
   </div>
 
 
