Test new method of adjusting UI to mobile, and rename cats.on(mew)

--- a/android/tinySSB/app/src/main/assets/web/src/tremola.html
+++ b/android/tinySSB/app/src/main/assets/web/src/tremola.html
@@ -26,6 +26,7 @@
          object-src 'none';
       "
   >
+  <meta name="viewport" content="width=device-width, initial-scale=0.8">
   <link rel="stylesheet" type="text/css" href="tremola.css" media="screen" />
   <script type="module" charset="UTF-8" src="scuttlesort.js"></script>
 <!--  <script src="fvbundle.js"></script>-->
